# ffencode-gui

./: Pipfile  README.md  main_ffencode.py  pyproject.toml  requirements.txt  transcoding.ui  utils_ffConv.py  utils_ffmpeg.py  utils_task.py  utils_thread.py  utils_toml.py
bak/: repaint.py  transcoding.ui  transcoding_ui.py  ui_service.py.bak
config/: config.toml  config.toml.win
doc/: Qt6.txt  nuitka.txt  pipenv-win.txt  poetry_pyside.txt  requirements.txt.bak  uv-pyqt6.txt
doc/sh/: designer-qt6.sh
service/: conv_service.py  convert-ui-to-py.sh  transcoding_ui.py  ui_service.py
utils/: utils_ffConv.py  utils_ffmpeg.py  utils_task.py  utils_thread.py  utils_toml.py
